--- a/skymain.html
+++ b/skymain.html
@@ -124,7 +124,7 @@
 		<a href="skyrule.html" onclick="showPage('群规')">群规</a>
         <a href="game_info.html" onclick="showPage('游戏资讯')">游戏资讯</a>
         <a href="post.html" onclick="showPage('群组加入')">群组加入</a>
-		<a href="skylogin.html" onclick="showPage('登出')">登出</a>
+		<a href="index.html" onclick="showPage('登出')">登出</a>
     </div>
 
     <main>
