--- a/skyregistration.html
+++ b/skyregistration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Page</title>
+  <title>光遇✨遠距離的羈絆</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -90,7 +90,7 @@
   </fieldset>
 
   <div id="loginLink">
-    <p>已经有账户了？ <a href="skylogin.html">点我登录</a>。</p>
+    <p>已经有账户了？ <a href="index.html">点我登录</a>。</p>
   </div>
 
   <script>
