--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </form>
 
   <div id="registerLink">
-    <p>没有账户吗? <a href="registration.html">点我注册</a>。</p>
+    <p>没有账户吗? <a href="skyregistration.html">点我注册</a>。</p>
   </div>
 
   <script>
