--- a/skyregistration.html
+++ b/skyregistration.html
@@ -112,9 +112,9 @@
         return;
       }
 
-      alert('注册成功!\nUsername: ' + username + '\nEmail: ' + email +'欢迎' + gender + '加入！');
+      alert('注册成功!\nUsername: ' + username + '\nEmail: ' + email + '\n欢迎加入');
 
-      window.location.href = 'skylogin.html';
+      window.location.href = 'index.html';
     });
   </script>
 </body>
