--- a/skyregistration.html
+++ b/skyregistration.html
@@ -112,7 +112,7 @@
         return;
       }
 
-      alert('注册成功!\nUsername: ' + username + '\nEmail: ' + email + '\n欢迎加入');
+      alert('注册成功!\nUsername: ' + username + '\nEmail: ' + email + '欢迎加入');
 
       window.location.href = 'index.html';
     });
