--- a/skyregistration.html
+++ b/skyregistration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>光遇✨遠距離的羈絆</title>
+  <title>账户注册</title>
   <style>
     body {
       font-family: Arial, sans-serif;
