--- a/post.html
+++ b/post.html
@@ -101,11 +101,11 @@
             <tbody>
                 <tr>
                     <td>眠</td>
-                    <td>12345</td>
+                    <td>klsj_0411</td>
                 </tr>
                 <tr>
                     <td>糖糖</td>
-                    <td>67890</td>
+                    <td>quinnn26</td>
                 </tr>
                 <tr>
                     <td>可乐</td>
