--- a/skyrule.html
+++ b/skyrule.html
@@ -24,18 +24,19 @@
             padding: 20px;
         }
 		
-		#back-btn {
+	.back-btn {
             position: absolute;
             top: 10px;
             left: 10px;
             font-size: 16px;
             cursor: pointer;
             background-color: #fff;
-            color: #4285f4;
+            color: #ff69b4;
             border: none;
             padding: 5px 10px;
             border-radius: 5px;
         }
+      
 
         h1 {
             color: white;
