--- a/skyregistration.html
+++ b/skyregistration.html
@@ -100,13 +100,16 @@
       var username = document.getElementById('username').value;
       var email = document.getElementById('email').value;
       var phone = document.getElementById('phone').value;
+	  var gender = document.getElementById('gender').value;
+	  var age = document.getElementById('age').value;
       localStorage.setItem('username', username);
       localStorage.setItem('email', email);
       localStorage.setItem('phone', phone);
+	  localStorage.setItem('gender', gender);
+	  localStorage.setItem('age', age);
       var password = document.getElementById('password').value;
 	  localStorage.setItem('password',password);
       var confirmPassword = document.getElementById('confirmPassword').value;
-
       if (password !== confirmPassword) {
         alert('Password and Confirm Password do not match.');
         return;
