--- a/skymain.html
+++ b/skymain.html
@@ -129,9 +129,8 @@
 
     <main>
         <!-- Content goes here -->
-        <h2>Welcome to the Main Page</h2>
-        <p>Feel free to explore different sections using the sidebar.</p>
-        <p>For example, you can click on the buttons to navigate to the profile, time, game information, and post pages.</p>
+        <h2>欢迎加入>>光遇✨遠距離的羈絆</h2>
+        <p>这是一个能聊天，交友等等的微信群组。</p>
 
         <table>
             <thead>
