--- a/skyregistration.html
+++ b/skyregistration.html
@@ -111,7 +111,7 @@
 	  localStorage.setItem('password',password);
       var confirmPassword = document.getElementById('confirmPassword').value;
       if (password !== confirmPassword) {
-        alert('Password and Confirm Password do not match.');
+        alert('密码与确认密码不匹配');
         return;
       }
 
