--- a/game_info.html
+++ b/game_info.html
@@ -5,37 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty Game Info</title>
     <style>
-        @media only screen and (max-width: 600px) {
-    /* Styles for small screens */
-    header {
-        padding: 10px;
-    }
-
-    .back-btn {
-        font-size: 14px;
-        padding: 3px 6px;
-    }
-
-    h1 {
-        font-size: 18px;
-    }
-
-    main {
-        padding: 10px;
-    }
-
-    .game-image {
-        max-width: 100%;
-    }
-
-    table {
-        width: 100%;
-    }
-
-    th, td {
-        padding: 8px;
-    }
-}
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -47,12 +16,6 @@
             flex-direction: column;
             align-items: center;
         }
-        @media only screen and (max-width: 600px) {
-    body {
-        font-size: 14px;
-    }
-}
-
         header {
             background-color: #ff69b4;
             color: #fff;
@@ -78,20 +41,9 @@
         h1 {
             color: #fff;
         }
-        main {
-    margin: 10px;
-}
-
-table {
-    margin: 10px 0;
-}
-
-th, td {
-    padding: 10px;
-}
-
 
         main {
+            margin: 10px;
             flex: 1;
             padding: 20px;
             width: 100%;
@@ -110,10 +62,14 @@ th, td {
             border-radius: 8px;
             margin-bottom: 20px;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
 
         table {
             width: 80%;
-            margin: 20px auto;
+            margin: 10px 0;
             border-collapse: collapse;
         }
 
