--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     var storedPassword = localStorage.getItem('password');
 
     if (enteredUsername === storedUsername && enteredPassword === storedPassword) {
-      alert('注册成功! 欢迎加入！');
+      alert('登录成功! 欢迎加入！');
 
       window.location.href ='skymain.html';
     } else {
