--- a/skymain.html
+++ b/skymain.html
@@ -123,6 +123,9 @@
         <a href="game_info.html" onclick="showPage('游戏资讯')">游戏资讯</a>
         <a href="post.html" onclick="showPage('群组加入')">群组加入</a>
 		<a href="index.html" onclick="showPage('登出')">登出</a>
+	    <a href="skypiano.html" onclick="showPage('光遇钢琴')">光遇钢琴</a>
+		<a href="height.html" onclick="showPage('身高测量')">身高测量</a>
+	   
     </div>
 
     <main>
