--- a/skypiano.html
+++ b/skypiano.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Beautiful Website</title>
+    <title>光遇钢琴</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -57,19 +57,13 @@
 </head>
 <body>
     <header>
-        <h1>Your Beautiful Website</h1>
+        <h1>光遇钢琴</h1>
     </header>
     <main>
         <p>Welcome to your beautiful website! Insert your links below:</p>
         <ul>
-            <li><a href="#link1">Link 1</a></li>
-            <li><a href="#link2">Link 2</a></li>
-            <li><a href="#link3">Link 3</a></li>
-            <!-- Add more links as needed -->
+            <li><a href="https://tokisakiyuu.github.io/skypiano/">点我跳转</a></li>
         </ul>
     </main>
-    <footer>
-        <p>&copy; 2024 Your Beautiful Website</p>
-    </footer>
 </body>
 </html>
