--- a/skypiano.html
+++ b/skypiano.html
@@ -66,6 +66,12 @@
             text-align: center;
             width: 100%;
         }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px; /* Adjust margin as needed */
+        }
     </style>
 </head>
 <body>
@@ -74,10 +80,11 @@
         <h1>光遇钢琴</h1>
     </header>
     <main>
-        <p>点击以下链接跳转至Sky Piano</p>
+        <p>点击以下链接跳转至 Sky Piano</p>
         <ul>
             <li><a href="https://tokisakiyuu.github.io/skypiano/">点我跳转</a></li>
         </ul>
+        <img src="piano.png">
     </main>
 
     <script>
