--- a/height.html
+++ b/height.html
@@ -58,6 +58,11 @@
         a:hover {
             text-decoration: underline;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px; /* Adjust margin as needed */
+        }
     </style>
 </head>
 <body>
@@ -69,6 +74,7 @@
         <p>点击以下链接跳转</p>
         <ul>
             <li><a href="https://youxi.166.net/5a212c015a9fdb69/">点我测量</a></li>
+            <img src="skyheight.png" alt="如何使用网站准确的测量">
         </ul>
     </main>
 
