--- a/height.html
+++ b/height.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>光遇身高测量器</title>
     <style>
         body {
@@ -58,6 +58,7 @@
         a:hover {
             text-decoration: underline;
         }
+
         img {
             max-width: 100%;
             height: auto;
@@ -74,8 +75,8 @@
         <p>点击以下链接跳转</p>
         <ul>
             <li><a href="https://youxi.166.net/5a212c015a9fdb69/">点我测量</a></li>
-            <img src="skyheight.png" alt="如何使用网站准确的测量">
         </ul>
+        <img src="skyheight.png" alt="如何使用网站准确的测量">
     </main>
 
     <script>
