--- a/skypiano.html
+++ b/skypiano.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>光遇钢琴</title>
     <style>
         body {
@@ -84,7 +84,7 @@
         <ul>
             <li><a href="https://tokisakiyuu.github.io/skypiano/">点我跳转</a></li>
         </ul>
-        <img src="piano.png">
+        <img src="piano.png" alt="Sky Piano Image">
     </main>
 
     <script>
