--- a/skypiano.html
+++ b/skypiano.html
@@ -82,7 +82,7 @@
     <main>
         <p>点击以下链接跳转至 Sky Piano</p>
         <ul>
-            <li><a href="https://tokisakiyuu.github.io/skypiano/">点我跳转</a></li>
+            <li><a href="https://tokisakiyuu.github.io/skypiano/" target="_blank">点我跳转</a></li>
         </ul>
         <img src="piano.png" alt="Sky Piano Image">
     </main>
