--- a/height.html
+++ b/height.html
@@ -74,7 +74,7 @@
     <main>
         <p>点击以下链接跳转</p>
         <ul>
-            <li><a href="https://youxi.166.net/5a212c015a9fdb69/">点我测量</a></li>
+            <li><a href="https://youxi.166.net/5a212c015a9fdb69/" target="_blank">点我测量</a></li>
         </ul>
         <img src="skyheight.png" alt="如何使用网站准确的测量">
     </main>
