--- a/skyregistration.html
+++ b/skyregistration.html
@@ -74,8 +74,8 @@
       <input type="tel" id="phone" name="phone" required>
 	  <label for="gender">性别:</label>
       <select  id="gender" name="gender" required>
-	  <option value="Male">帅哥</option>
-	  <option value="Female">美女</option></select>
+	  <option value="帅哥">帅哥</option>
+	  <option value="美女">美女</option></select>
 	  <label for="age">年龄:</label>
       <input type="number" id="age" name="age" min="1" required>
 	  <br></br>
