--- a/skymain.html
+++ b/skymain.html
@@ -118,7 +118,7 @@
 
     <div class="sidebar" id="mySidebar">
         <button class="close-btn" onclick="closeNav()">×</button>
-		<a href="skyrule.html" onclick="showPage('群规')">群规</a>
+		<a href="index.html" onclick="showPage('群规')">群规</a>
         <a href="game_info.html" onclick="showPage('游戏资讯')">游戏资讯</a>
         <a href="post.html" onclick="showPage('群组加入')">群组加入</a>
 	    <a href="skypiano.html" onclick="showPage('光遇钢琴')">光遇钢琴</a>
