--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             background-color: #f8f8f8;
             color: #333;
         }
+	    
 
         header {
             background-color: #4285f4;
@@ -64,6 +65,22 @@
             color: #fff;
             padding: 10px;
             text-align: center;
+        }
+	     table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #333;
+            color: #fff;
         }
     </style>
 </head>
