--- a/skymain.html
+++ b/skymain.html
@@ -111,11 +111,11 @@
     </style>
 </head>
 <body>
-    <header>
-        <button class="open-btn" onclick="openNav()">☰</button>
-        <h1>光遇✨遠距離的羈絆</h1>
-    </header>
-
+      <header>
+	<button class="back-btn" onclick="goBack()">返回</button>
+        <h1>欢迎加入！！</h1>
+        <p>以下是群组公告及群规</p>
+      </header>
     <div class="sidebar" id="mySidebar">
         <button class="close-btn" onclick="closeNav()">×</button>
 		<a href="index.html" onclick="showPage('群规')">群规</a>
