--- a/skymain.html
+++ b/skymain.html
@@ -6,6 +6,60 @@
 
     <title>光遇✨遠距離的羈絆</title>
     <style>
+	            body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+	    
+
+        header {
+            background-color: #4285f4;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+        }
+		
+	.back-btn {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #fff;
+            color: #ff69b4;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+      
+
+        h1 {
+            color: white;
+        }
+
+        h2 {
+            color: #4285f4;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
