--- a/skymain.html
+++ b/skymain.html
@@ -180,7 +180,34 @@
 	    
 	   
     </div>
+ <main>
+        <!-- Content goes here -->
+        <h2>欢迎加入>>光遇✨遠距離的羈絆</h2>
+        <p>这是一个能聊天，交友等等的微信群组。</p>
 
+        <table>
+            <thead>
+                <tr>
+                    <th>群管理</th>
+                    <th>照片</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>眠</td>
+                    <td><img src="leader1.jpg" alt="群主">群主</td>
+                </tr>
+                <tr>
+                    <td>糖糖</td>
+                    <td><img src="leader2.jpg" alt="管理员">管理员</td>
+                </tr>
+                <tr>
+                    <td>可乐</td>
+                    <td><img src="cola.jpg" alt="管理员">管理员</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
     <main>
       <h2>本群</h2>
 <p><b>可交易  处关系 请私下解决  需谨慎</b></p>
