--- a/index.html
+++ b/index.html
@@ -60,22 +60,6 @@
             margin-bottom: 10px;
         }
 
-	     table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-        }
-
-        th {
-            background-color: #333;
-            color: #fff;
-        }
     </style>
 </head>
 <body>
@@ -90,33 +74,23 @@
 	    <a href="skypiano.html" onclick="showPage('光遇钢琴')">光遇钢琴</a>
 		<a href="height.html" onclick="showPage('身高测量')">身高测量</a>
 
-	     <main>
-        <!-- Content goes here -->
-        <h2>欢迎加入>>光遇✨遠距離的羈絆</h2>
-        <p>这是一个能聊天，交友等等的微信群组。</p>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>群管理</th>
-                    <th>照片</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>眠</td>
-                    <td><img src="leader1.jpg" alt="群主">群主</td>
-                </tr>
-                <tr>
-                    <td>糖糖</td>
-                    <td><img src="leader2.jpg" alt="管理员">管理员</td>
-                </tr>
-                <tr>
-                    <td>可乐</td>
-                    <td><img src="cola.jpg" alt="管理员">管理员</td>
-                </tr>
-            </tbody>
-        </table>
+	    <main>
+      <h2>本群</h2>
+<p><b>可交易  处关系 请私下解决  需谨慎</b></p>
+<p><b>不喜欢热闹 可消息免打扰</b></p>
+<p><b>群里说瓜 请注意分寸 严禁吵架 少阴阳怪气 </b></p>
+<p><b>别在我们的群吵架哈🤝   </b></p>
+<p><b>我们的群 一直都是和睦相处  不想因为一点小事上避雷匿名哈</b></p>
+<hr>
+<br>
+<p><b>如有任何 事情可加群主/其他管理  来说 </b></p>
+<p><b>请勿私下借钱给他人</b></p>
+<p><b>有私对借钱的行为  被骗了 本群既不负责</b></p>
+<br>
+<p><b>感谢大家的配合与尊重</b></p>
+<p><b>我的语气很好</b></p>
+<p><b>我的语气很好</b></p>
+<p><b>我的语气很好</b></p>
     </main>
 </body>
 <script>
