--- a/index.html
+++ b/index.html
@@ -59,6 +59,41 @@
         li {
             margin-bottom: 10px;
         }
+	    
+        .sidebar {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            z-index: 1;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+            background-color: #333;
+            color: #fff;
+            left: 0;
+        }
+
+        .sidebar a {
+            padding: 8px;
+            text-decoration: none;
+            font-size: 20px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+
+        .open-btn, .close-btn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px;
+}
 
     </style>
 </head>
