--- a/index.html
+++ b/index.html
@@ -133,5 +133,15 @@
         function goBack() {
             window.history.back();
         }
+        function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+        }
+
+      
+    </script>
     </script>
 </html>
