--- a/skymain.html
+++ b/skymain.html
@@ -228,15 +228,9 @@
     </main>
 
     <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
+         function goBack() {
+            window.history.back();
         }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-        }
-
-      
     </script>
 </body>
 </html>
