--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
 
     </style>
 </head>
+	 <header>
+	<button class="back-btn" onclick="goBack()">返回</button>
+        <h1>欢迎加入！！</h1>
+        <p>以下是群组公告及群规</p>
+      </header>
 <body>
 
 	    <div class="sidebar" id="mySidebar">
