--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
 
 	    <div class="sidebar" id="mySidebar">
         <button class="close-btn" onclick="closeNav()">×</button>
-		<a href="index.html" onclick="showPage('群规')">群规</a>
+		<a href="skymain.html" onclick="showPage('群主及管理')">群主及管理</a>
         <a href="game_info.html" onclick="showPage('游戏资讯')">游戏资讯</a>
         <a href="post.html" onclick="showPage('群组加入')">群组加入</a>
 	    <a href="skypiano.html" onclick="showPage('光遇钢琴')">光遇钢琴</a>
 		<a href="height.html" onclick="showPage('身高测量')">身高测量</a>
+	    </div>
 
 	    <main>
       <h2>本群</h2>
