--- a/skymain.html
+++ b/skymain.html
@@ -6,60 +6,6 @@
 
     <title>光遇✨遠距離的羈絆</title>
     <style>
-	            body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
-        }
-	    
-
-        header {
-            background-color: #4285f4;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        main {
-            padding: 20px;
-        }
-		
-	.back-btn {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #fff;
-            color: #ff69b4;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-      
-
-        h1 {
-            color: white;
-        }
-
-        h2 {
-            color: #4285f4;
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -118,41 +64,6 @@
             width: 100%;
         }
 
-        .sidebar {
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            z-index: 1;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-            background-color: #333;
-            color: #fff;
-            left: 0;
-        }
-
-        .sidebar a {
-            padding: 8px;
-            text-decoration: none;
-            font-size: 20px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
-        }
-
-        .sidebar a:hover {
-            color: #f1f1f1;
-        }
-
-        .open-btn, .close-btn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px;
-}
-
 	    @media only screen and (max-width: 600px) {
     h1 {
         font-size: 24px;
@@ -168,7 +79,7 @@
       <header>
 	<button class="back-btn" onclick="goBack()">返回</button>
         <h1>欢迎加入！！</h1>
-        <p>以下是群组公告及群规</p>
+        <p>以下是群主及管理</p>
       </header>
 
  <main>
@@ -199,25 +110,7 @@
             </tbody>
         </table>
     </main>
-    <main>
-      <h2>本群</h2>
-<p><b>可交易  处关系 请私下解决  需谨慎</b></p>
-<p><b>不喜欢热闹 可消息免打扰</b></p>
-<p><b>群里说瓜 请注意分寸 严禁吵架 少阴阳怪气 </b></p>
-<p><b>别在我们的群吵架哈🤝   </b></p>
-<p><b>我们的群 一直都是和睦相处  不想因为一点小事上避雷匿名哈</b></p>
-<hr>
-<br>
-<p><b>如有任何 事情可加群主/其他管理  来说 </b></p>
-<p><b>请勿私下借钱给他人</b></p>
-<p><b>有私对借钱的行为  被骗了 本群既不负责</b></p>
-<br>
-<p><b>感谢大家的配合与尊重</b></p>
-<p><b>我的语气很好</b></p>
-<p><b>我的语气很好</b></p>
-<p><b>我的语气很好</b></p>
-    </main>
-
+ 
     <script>
          function goBack() {
             window.history.back();
