--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Page</title>
+    <title>邀请页面</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -84,11 +84,11 @@
 <body>
     <header>
         <button class="back-btn" onclick="goBack()">返回</button>
-        <h1>欢迎使用以下二维码加入群主</h1>
+        <h1>欢迎使用以下二维码加入群组</h1>
     </header>
 
     <main>
-        <img class="qr-code" src="your_qr_code_image_url.jpg" alt="Group QR Code">
+        <img class="qr-code" src="skyqr.jpg" alt="群组QR">
         <p>如qr使用不了，可自行添加以下管理员或群主联系他们邀请您加入</p>
         <h2>群主及管理员</h2>
         <table>
