--- a/height.html
+++ b/height.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <header>
-        <button class="back-btn" onclick="goBack()">Back</button>
+        <button class="back-btn" onclick="goBack()">返回</button>
         <h1>光遇身高</h1>
     </header>
     <main>
