--- a/skypiano.html
+++ b/skypiano.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <button class="back-btn" onclick="goBack()">Back</button>
+        <button class="back-btn" onclick="goBack()">返回</button>
         <h1>光遇钢琴</h1>
     </header>
     <main>
