--- a/skymain.html
+++ b/skymain.html
@@ -97,11 +97,11 @@
             <tbody>
                 <tr>
                     <td>眠</td>
-                    <td><img src="leader1.jpg" alt="群主">群主</td>
+                    <td><img src="leader1.jpg" alt="群主">群主（没有帅照）</td>
                 </tr>
                 <tr>
                     <td>糖糖</td>
-                    <td><img src="leader2.jpg" alt="管理员">管理员</td>
+                    <td><img src="leader2.jpg" alt="管理员">管理员（没有帅照）</td>
                 </tr>
                 <tr>
                     <td>可乐</td>
