--- a/game_info.html
+++ b/game_info.html
@@ -144,8 +144,8 @@
 <p><b>冬令时间带来的变化 将在11月6日生效 所有活动会推迟一个小时‼</b></p>
 <img class="money1" src="money1.jpg">
 
-<p><b>一月份紅石☄</b></p>
-<img class="sky5" src="sky5.jpg">
+<p><b>二月份紅石☄</b></p>
+<img class="skybatu" src="skybatu.jpg">
 <p><b>以上图源全来着:脸书 黒沢隼人 ハヤト</b></p>
 
 <p><b>禮包價格換算表💰</b></p>
