--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         .sidebar {
-            width: 100%;
+            width: auto;
             height: 100%;
             position: fixed;
             z-index: 1;
