--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <a href="post.html" onclick="showPage('群组加入')">群组加入</a>
     <a href="skypiano.html" onclick="showPage('光遇钢琴')">光遇钢琴</a>
     <a href="height.html" onclick="showPage('身高测量')">身高测量</a>
+    <a href="spin.html" onclick="showPage('想不到名字')">选择困难</a>
 </div>
 
      <main>
