--- a/spin.html
+++ b/spin.html
@@ -31,5 +31,9 @@
     <p>选择困难也能使用它</p>
     
     <a href="https://cn.piliapp.com/random/wheel/" target="_blank">戳我跳转</a>
+    <br>
+    <p>小游戏</p>
+    
+    <a href="https://poki.com/zh" target="_blank">戳我跳转</a>
 </body>
 </html>
