--- a/spin.html
+++ b/spin.html
@@ -35,5 +35,9 @@
     <p>小游戏</p>
     
     <a href="https://poki.com/zh" target="_blank">戳我跳转</a>
+    <br>
+    <p>Mahjong麻将</p>
+    
+    <a href="https://mahjongo.com/zh/chinese" target="_blank">戳我跳转</a>
 </body>
 </html>
